<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/llItemCate"
    android:layout_marginBottom="10dp"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">
        <TextView
            android:id="@+id/tvNameCategory"
            android:textSize="20sp"
            android:text="@string/name_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCreatedDate"
            android:textSize="20sp"
            android:text="@string/created_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit"
        android:text="@string/edit"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>